--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     class="img"
                     src="/rsschool-cv/img/my-selfie.jpg"
                     alt="..."
-                    title="This is me:)"
+                    title="This is me"
                 >
                 </div>
                 <div class="nav">
@@ -33,17 +33,17 @@
                 </div>
                 <div>
                     <h1 class="about__myself">About myself</h1>
-                    <pre class="about__myself__text">
-                    Hi all! My name is Dima, I am from Belarus and I am 25 years old.
-                I graduated from the Belarusian National Technical University at the
-            of mechanical engineering, was studied in China, and now I work as a Claims
-            specialist. Good communication skills, I work responsibly both in a team and
-            when performing tasks independently.I always try to find a way out of a
-            difficult situation and achieve the desired result. My dream is to become a
-            Front-end developer, and in the future full-stack developer. I am constantly
-            learning something new and ready to learn more. Unfortunately, I have no
-            experience at the moment, only practice.
-                    </pre>
+                <pre class="about__myself__text">
+            Hi all! My name is Dmitry, I am from Belarus and I am 25 years old.
+        I graduated from the Belarusian National Technical University at the
+    of mechanical engineering, was studied in China, and now I work as a Claims
+    specialist. Good communication skills, I work responsibly both in a team and
+    when performing tasks independently.I always try to find a way out of a
+    difficult situation and achieve the desired result. My dream is to become a
+    Front-end developer, and in the future full-stack developer. I am constantly
+    learning something new and ready to learn more. Unfortunately, I have no
+    experience at the moment, only practice.
+                </pre>
                 </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="code__example__page__list">
                 <code>
     let values = [10, 20, -2, 6, 11, -10, 125, -3, 8, 0, 3];
-    for (let i = values.length; i > 0; i--) {
+    for (let i = values.length; i &#62; 0; i--) {
         const element = values[i]
         if (element &#60; 0) {
             values.splice(i, 1)}
